[package]
name = "buildgentest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
quote = "1.0.35"


[build-dependencies]
quote = "1.0.35"
syn = "2.0.48"
dotenv = "0.15.0"
prettyplease = "0.2.16"
